# mc-level

./: COPYING  Find.hs  NBTXML.hs  README.md  TODO  mc-finder.hs  mc-level.cabal  mc-read-world.hs  mc-world-to-xml.hs  minecraft-level.cabal  parse-level.hs  parse-region.hs
Data/NBT/: NBTXML.hs  XML.hs
Game/Minecraft/: Identifiers.hs  Level.hs
test-world/: level.dat_mcr  level.dat_old
test-world/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
